--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi Aplicación Angular</title>
+  <meta charset="utf-8">
+  <title>AppEvent</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root> 
+  <app-root></app-root>
 </body>
 </html>
-
